# scrob-central

./: .dockerignore  Dockerfile  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml
controller/: __init__.py  scrobbler_events.py  spotify_auth.py
schema/: __init__.py
schema/spotify/: __init__.py  generated.py  playback.py
service/: mongodb.py  scrobble.py  spotify_authenticator.py  ws_conn_manager.py
util/: with_async_io_thread.py
