[project]
name = "scrob-central"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "fastcrud>=0.22.3",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
